requested changes and add/remove now on right click